# cpp-delivery-dispatcher

./: .gitignore  CMakeLists.txt  README.md  main.cpp  video_script_10min.md
gui/: MainWindow.cpp  MainWindow.h  main_gui.cpp  resources.qrc
include/: Avion.h  Camion.h  Colis.h  Drone.h  Exceptions.h  Exeption.h  RapportManager.h  SystemeLivraison.h  Transporteur.h  Velo.h  drone.h  velo.h
scr/: drone.cpp  velo.cpp
src/: Avion.cpp  Camion.cpp  Colis.cpp  Drone.cpp  RapportManager.cpp  SystemeLivraison.cpp  Velo.cpp
tests/: TransporteursTests.cpp
